--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 
 <!DOCTYPE html>
-<html xmlns=""http://www.GuoZhongyu.github.io.git" xml:lang="en">
+<html xmlns=""http://www.GuoZhongyu.github.io" xml:lang="en">
 
 <head>
 
@@ -88,16 +88,13 @@
 
 <!-- The Home Section -->
     <div class="w3-container w3-center w3-padding-32" id="home">
-      <img style="width: 80%;max-width: 320px" alt="profile photo" src="images/Yunhe_new.jpg">
-      <h1>Yunhe Wang</h1>
+      <img style="width: 80%;max-width: 320px" alt="profile photo" src="images/top.jpg">
+      <h1>Zhongyu GUO</h1>
         <p class="w3-justify" style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;max-width:600px">
-          I am a senior researcher at <a href="https://www.noahlab.com.hk/">Huawei Noah's Ark Lab</a>, Beijing, where I work on deep learning, model compression, and computer vision, etc. Before that, I did my PhD at school of EECS, <a href="https://www.pku.edu.cn/">Peking University</a>, where I was co-advised by Prof. <a href="https://dblp.org/pers/hd/x/Xu_0006:Chao">Chao Xu</a></a> and Prof. <a href="https://scholar.google.com.sg/citations?user=RwlJNLcAAAAJ">Dacheng Tao</a></a>. I did my bachelors at school of science, <a href="https://en.xidian.edu.cn/">Xidian University</a>.
+          
         </p>
         <p class="w3-center">
-          <a href="mailto:yunhe.wang@huawei.com">Email</a> &nbsp/&nbsp
-          <a href="https://scholar.google.com/citations?user=isizOkYAAAAJ">Google Scholar</a> &nbsp/&nbsp
-          <a href="https://www.zhihu.com/people/YunheWang"> Zhi Hu </a> &nbsp/&nbsp
-          <a href="https://dblp.org/pid/63/8217-1.html"> DBLP </a>
+          E-mail: zhongyuguo2019@gmail.com
         </p>
         </tbody></table>
   </div>
