--- a/index.html
+++ b/index.html
@@ -154,57 +154,57 @@
     <ol>
 
       <p>
-      <li><strong>Guo, Z.Y.</strong>, Wang, J.Q., Chen, X., Cui, F.F., Wang, T.T., Zhou, C.Z., Song, G.B., Zhang, S.Y., Chen, J.W., 2021. Photochemistry of dissolved organic matter extracted from coastal seawater: Excited triplet-states and contents of phenolic moieties. <strong>Water Res.</strong> 188: 116568.</li>
+      <li><a style="color: #447ec9"><strong>Guo, Z.Y.</strong></a>, Wang, J.Q., Chen, X., Cui, F.F., Wang, T.T., Zhou, C.Z., Song, G.B., Zhang, S.Y., Chen, J.W., 2021. Photochemistry of dissolved organic matter extracted from coastal seawater: Excited triplet-states and contents of phenolic moieties. <strong>Water Res.</strong> 188: 116568.</li>
       <a style="color: #447ec9" href="https://doi.org/10.1016/j.watres.2020.116568">https://doi.org/10.1016/j.watres.2020.116568</a> 
       </p>
       
       <p>
-      <li>Guo, Z.Y., Chen, J.W., Zhang, S.Y., Chen, X., Wang, J.Q., Cui, F.F., 2020. Effects of dissolved organic matter on photochemical transformation of organic micropollutants in natural waters (in Chinese). Chin. Sci. Bull. 65, (26): 2786-2803</li>
+      <li><a style="color: #447ec9"><strong>Guo, Z.Y.</strong></a>, Chen, J.W., Zhang, S.Y., Chen, X., Wang, J.Q., Cui, F.F., 2020. Effects of dissolved organic matter on photochemical transformation of organic micropollutants in natural waters (in Chinese). Chin. Sci. Bull. 65, (26): 2786-2803</li>
       <a style="color: #447ec9" href="https://doi.org/10.1360/TB-2020-0791">https://doi.org/10.1360/TB-2020-0791</a> 
       </p>
 
       <p>
-      <li>Guo, Z.Y., Kodikara, D., Albi, L.S., Hatano, Y., Chen, G., Yoshimura, C., Wang, J.Q., 2022. Photodegradation of Organic Micropollutants in Aquatic Environment: Importance, Factors and Processes. Water Res. In press</li>
+      <li><a style="color: #447ec9"><strong>Guo, Z.Y.</strong></a>, Kodikara, D., Albi, L.S., Hatano, Y., Chen, G., Yoshimura, C., Wang, J.Q., 2022. Photodegradation of Organic Micropollutants in Aquatic Environment: Importance, Factors and Processes. Water Res. In press</li>
       <a style="color: #447ec9" href="https://doi.org/10.1016/j.watres.2022.118236">https://doi.org/10.1016/j.watres.2022.118236</a> 
       </p>
 
       <p>
-      <li>Guo, Z.Y., Hatakeyama, T., Yoshimura, C., Wang, T.T., Hatano., Y., 2022. Relationship between Influent Sewage Quality and Sewershed Characteristics in Tokyo City. Journal of Water and Health. 20, 972-983. </li>
+      <li><a style="color: #447ec9"><strong>Guo, Z.Y.</strong></a>, Hatakeyama, T., Yoshimura, C., Wang, T.T., Hatano., Y., 2022. Relationship between Influent Sewage Quality and Sewershed Characteristics in Tokyo City. Journal of Water and Health. 20, 972-983. </li>
       <a style="color: #447ec9" href="https://doi.org/10.2166/wh.2022.022">https://doi.org/10.2166/wh.2022.022</a> 
       </p>
 
       <p>
-        <li>Guo, Y.C., Guo, Z.Y., Wang, J.Q., Ye, Z.M., Zhang, L.L,. Niu., J.F., 2021. Photodegradation of three antidepressants in natural waters: Important roles of dissolved organic matter and nitrate. Sci. Total. Environ. 802: 149825.</li>
+        <li>Guo, Y.C., <a style="color: #447ec9"><strong>Guo, Z.Y.</strong></a>, Wang, J.Q., Ye, Z.M., Zhang, L.L,. Niu., J.F., 2021. Photodegradation of three antidepressants in natural waters: Important roles of dissolved organic matter and nitrate. Sci. Total. Environ. 802: 149825.</li>
         <a style="color: #447ec9" href="https://doi.org/10.1016/j.scitotenv.2021.149825">https://doi.org/10.1016/j.scitotenv.2021.149825</a>
       </p>
 
       <p>
-        <li>Ye, Z.M., Guo, Z.Y., Wang, J.Q. Zhang, L.L. Guo, Y.C. Niu, J.F., Yoshimura, C., 2021. Photodegradation of acebutolol in natural waters: important roles of carbonate radical and hydroxyl radical. Chemosphere. 287, 132318. </li>
+        <li>Ye, Z.M., <a style="color: #447ec9"><strong>Guo, Z.Y.</strong></a>, Wang, J.Q. Zhang, L.L. Guo, Y.C. Niu, J.F., Yoshimura, C., 2021. Photodegradation of acebutolol in natural waters: important roles of carbonate radical and hydroxyl radical. Chemosphere. 287, 132318. </li>
         <a style="color: #447ec9" href="https://doi.org/10.1016/j.chemosphere.2021.132318">https://doi.org/10.1016/j.chemosphere.2021.132318</a>
       </p>
 
       <p>
-        <li>Wang, J.Q., Wang, K. Zhang, L.L. Guo, Y.C. Guo, Z.Y., Sun, W., Ye, Z.M. Niu, J.F., 2021. Mechanism of bicarbonate enhancing the photodegradation of β-blockers in natural waters. Water Res. 197: 117078. </li>
+        <li>Wang, J.Q., Wang, K. Zhang, L.L. Guo, Y.C. <a style="color: #447ec9"><strong>Guo, Z.Y.</strong></a>, Sun, W., Ye, Z.M. Niu, J.F., 2021. Mechanism of bicarbonate enhancing the photodegradation of β-blockers in natural waters. Water Res. 197: 117078. </li>
         <a style="color: #447ec9" href="https://doi.org/10.1016/j.watres.2021.117078">https://doi.org/10.1016/j.watres.2021.117078</a>
       </p>
 
       <p>
-        <li>Wang, J.Q., Wang, K., Guo, Y.C., Ye, Z.M., Guo, Z.Y., Lei, Y., Yang, X. Niu, J.F., 2021. Dichlorine radicals (Cl2•-) promote the photodegradation of propranolol in estuarine and coastal waters. Journal of Hazardous materials. J. Hazar. Mater. 414: 125536.</li>
+        <li>Wang, J.Q., Wang, K., Guo, Y.C., Ye, Z.M., <a style="color: #447ec9"><strong>Guo, Z.Y.</strong></a>, Lei, Y., Yang, X. Niu, J.F., 2021. Dichlorine radicals (Cl2•-) promote the photodegradation of propranolol in estuarine and coastal waters. Journal of Hazardous materials. J. Hazar. Mater. 414: 125536.</li>
         <a style="color: #447ec9" href="https://doi.org/10.1016/j.jhazmat.2021.125536">https://doi.org/10.1016/j.jhazmat.2021.125536</a>
       </p>
 
       <p>
-        <li>Wang, J.Q., Chen, J.W., Qiao, X.L., Zhang, Y.N., Uddin, M., Guo, Z.Y., 2019. Disparate effects of DOM extracted from coastal seawaters and freshwaters on photodegradation of 2,4-Dihydroxybenzophenone. Water Res. 151: 280-287.</li>
+        <li>Wang, J.Q., Chen, J.W., Qiao, X.L., Zhang, Y.N., Uddin, M., <a style="color: #447ec9"><strong>Guo, Z.Y.</strong></a>, 2019. Disparate effects of DOM extracted from coastal seawaters and freshwaters on photodegradation of 2,4-Dihydroxybenzophenone. Water Res. 151: 280-287.</li>
         <a style="color: #447ec9" href="https://doi.org/10.1016/j.watres.2018.12.045">https://doi.org/10.1016/j.watres.2018.12.045</a>
       </p>
 
       <p>
-        <li>Guo, Y.C., Guo, Z.Y., Zhang, L.L., Yoshimura, C., Ye, Z.M., Yu, P.F., Qian, Y., Hatano, Y., Wang, J.Q., Niu., J.F., 2022. Photodegradation of Propranolol in Surface Waters: An Important Role of Carbonate Radical and Enhancing Toxicity Phenomenon. Chemosphere. 297, 134106.</li>
+        <li>Guo, Y.C., <a style="color: #447ec9"><strong>Guo, Z.Y.</strong></a>, Zhang, L.L., Yoshimura, C., Ye, Z.M., Yu, P.F., Qian, Y., Hatano, Y., Wang, J.Q., Niu., J.F., 2022. Photodegradation of Propranolol in Surface Waters: An Important Role of Carbonate Radical and Enhancing Toxicity Phenomenon. Chemosphere. 297, 134106.</li>
         <a style="color: #447ec9" href="https://doi.org/10.1016/j.chemosphere.2022.134106">https://doi.org/10.1016/j.chemosphere.2022.134106</a>
       </p>
 
       <p>
-        <li>Zhou, Y.F., Zhao, K., Amin, M.A., Fang, C., Guo, Z.Y., Yoshimura, C., Niu, J.F., Elucidating the role of phosphorus doping in Co and Ni-loaded carbon nitride photocatalysts for nefazodone degradation. Environ. Funct. Mater. 1, 114-120. </li>
+        <li>Zhou, Y.F., Zhao, K., Amin, M.A., Fang, C., <a style="color: #447ec9"><strong>Guo, Z.Y.</strong></a>, Yoshimura, C., Niu, J.F., Elucidating the role of phosphorus doping in Co and Ni-loaded carbon nitride photocatalysts for nefazodone degradation. Environ. Funct. Mater. 1, 114-120. </li>
         <a style="color: #447ec9" href="https://doi.org/10.1016/j.efmat.2022.05.001">https://doi.org/10.1016/j.efmat.2022.05.001</a>
       </p>
     </ol>
