--- a/index.html
+++ b/index.html
@@ -99,18 +99,7 @@
         </tbody></table>
   </div>
 
-  <div class="w3-container w3-padding-32" id="Awards">
-    <h2>Awards</h2>
-    <p> 2022.04-2024.03, JSPS Research Fellowship for Young Scientists-DC2 (日本学術振興会特別研究員DC2) </p>
-    <p> 2021.11.09 RSC Environmental Science Best Oral Presentation Prize</p>
-    <li>Photochemistry of Dissolved Organic Matter Extracted from Coastal Seawater: Excited Triplet-States and Contents of Phenolic Moieties. The 41st International Symposium on Halogenated Persistent Organic Pollutants, Control Strategies and Technologies.</li>
-    <p> 2021.4-2022.4, Tokyo Tech Human Resource Development Fellowship for Doctoral Students (東京工業大学高度人材育成博士フェローシップ) </p>
-    <p> 2020.11-2021.3, Tokyo Tech Tsubame Scholarship for Doctoral Students (東京工業大学つばめ奨学金) </p>
-    <p> 2020.11-2021.3, Japan Student Services Organization, JASSO (独立行政法人日本学生支援機構奨学金) </p>
-    <p> 2018, China National scholarship (Dalian University of Technology) </p>
-    <p> 2016, The first place of Chinese freestyle skating championship in battle slide (Dalian Maritime University)</p>
-  </div>
-<!-- The Projects Section -->
+ojects Section -->
   <div class="w3-container w3-padding-32" id="projects">
     <h2>Projects</h2>
     
@@ -224,6 +213,21 @@
 
   <!-- End page content -->
 </div>
+
+
+<div class="w3-container w3-padding-32" id="Awards">
+  <h2>Awards</h2>
+  <p> 2022.04-2024.03, JSPS Research Fellowship for Young Scientists-DC2 (日本学術振興会特別研究員DC2) </p>
+  <p> 2021.11.09 RSC Environmental Science Best Oral Presentation Prize
+      Photochemistry of Dissolved Organic Matter Extracted from Coastal Seawater: Excited Triplet-States and Contents of Phenolic Moieties. The 41st International Symposium on Halogenated Persistent Organic Pollutants, Control Strategies and Technologies.
+  </p>
+  <p> 2021.4-2022.4, Tokyo Tech Human Resource Development Fellowship for Doctoral Students (東京工業大学高度人材育成博士フェローシップ) </p>
+  <p> 2020.11-2021.3, Tokyo Tech Tsubame Scholarship for Doctoral Students (東京工業大学つばめ奨学金) </p>
+  <p> 2020.11-2021.3, Japan Student Services Organization, JASSO (独立行政法人日本学生支援機構奨学金) </p>
+  <p> 2018, China National scholarship (Dalian University of Technology) </p>
+  <p> 2016, The first place of Chinese freestyle skating championship in battle slide (Dalian Maritime University)</p>
+</div>
+<!-- The Pr
 
 <script>
 // Accordion 
