--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
   </div>
 
  <!-- The Publications Section -->
-  <div class="w3-container w3-padding-32" id="Awards">
+  <div class="w3-container w3-padding-32" id="award">
     <h2>Awards</h2>
     <p> <li>2022.04-2024.03, JSPS Research Fellowship for Young Scientists-DC2 (日本学術振興会特別研究員DC2) </li></p>
     <p> <li>2021.11.09 RSC Environmental Science Best Oral Presentation Prize</li></p>
