--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
   </div>
   <div class="w3-padding-64 w3-text-light-grey w3-large" style="font-weight:bold">
     <a href="#home" class="w3-bar-item w3-button">Home</a>
+    <a href="#education" class="w3-bar-item w3-button">Education</a>
     <a href="#resarche" class="w3-bar-item w3-button">Research</a>
     <a href="#projects" class="w3-bar-item w3-button">Projects</a>
     <a href="#publications" class="w3-bar-item w3-button">Publications</a>
@@ -102,7 +103,9 @@
 <!--ojects Section -->
   <div class="w3-container w3-padding-32" id="projects">
     <h2>Projects</h2>
-    
+
+
+
 <!--
   <p class="w3-justify">
         Actually, model compression is a kind of technique for developing portable deep neural networks with lower memory and computation costs. I have done several projects in Huawei including some smartphones' applications in 2019 and 2020 (e.g. Mate 30 and Honor V30). Currently, I am leading the AdderNet project, which aims to develop a series of deep learning models using only additions (<a href="https://www.reddit.com/r/MachineLearning/comments/ekw2s1/r_addernet_do_we_really_need_multiplications_in/">Discussions on Reddit</a>).
@@ -136,6 +139,29 @@
         </p>  
 -->
   </div>
+
+
+  <div class="w3-container w3-padding-32" id="education">
+    <h2>Education</h2>
+      <p> <li>
+        Oct. 2020-present, PhD candidate, Tokyo Institute of Technology, Civil Engineering
+      </li>
+      <p>Supervisor: Prof. & Dr. Yoshimura Chihiro</p>
+      </p>
+
+      <p> <li>
+        Sep. 2017-Jul. 2020, Master, Dalian University of Technology, Environmental Engineering,
+      </li>
+      <p>Supervisor: Prof.& Dr. Jingwen Chen </p>
+      </p>
+
+      <p> <li>
+        Sep. 2013-Jul. 2017, Bachelor, Dalian Maritime University, Environmental Science and Engineering
+      </li>
+      </p>
+
+  </div>
+
   
   <!-- The Talks Section -->
   <div class="w3-container w3-light-grey w3-padding-32" id="talks">
@@ -147,6 +173,7 @@
       <p><li> 05/2020, "<a href="https://www.bilibili.com/video/av925692420/">Edge AI: Progress and Future Directions</a>" at <a href="https://www.qbitai.com/"> <strong>QbitAI</strong></a> using <a  href="https://www.bilibili.com/"><strong>bilibili</strong></a>.</li></p>
   -->
   </div>
+
  <!-- The Publications Section -->
   <div class="w3-container w3-padding-32"" id="publications">
     <h2>Publications</h2>
