--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
   <div class="w3-padding-64 w3-text-light-grey w3-large" style="font-weight:bold">
     <a href="#home" class="w3-bar-item w3-button">Home</a>
     <a href="#education" class="w3-bar-item w3-button">Education</a>
-    <a href="#resarche" class="w3-bar-item w3-button">Research</a>
+    <a href="#resarch" class="w3-bar-item w3-button">Research</a>
     <a href="#projects" class="w3-bar-item w3-button">Projects</a>
     <a href="#publications" class="w3-bar-item w3-button">Publications</a>
     <a href="#talks" class="w3-bar-item w3-button">Talks</a>
@@ -162,6 +162,16 @@
 
   </div>
 
+  <div class="w3-container w3-padding-32" id="research">
+    <h2>Research</h2>
+
+      <p><strong>Research Field: Environmental Photochemistry</strong></p>
+      <p><strong>Modeling quantum yield of photo-production of reactive intermediates in freshwater environment<strong></p>
+      <p>Over 140,000 kinds of chemicals are in use in human daily life leading to these chemicals entering the environmental water bodies inevitably. Although many of them are present at a low concentration, some of them raise considerable toxicological concerns. Thus, it is essential to investigate their fate for the ecological risk assessment. Photodegradation is proved to be an important pathway for attenuations of organic micropollutants (OMPs) in sunlit surface waters. OMPs can be removed through indirect photodegradation involving a variety of photochemically produced reactive intermediates (PPRIs) such as excited triplet-state of dissolved organic matter (3DOM*), HO·, singlet oxygen (1O2) and so on. </p>
+      <p>Photochemical reactivity (ability to produce PPRIs) varied from water bodies mainly due to different composition of dissolved constituents (i.e., DOM). Since multifarious OMPs were detected in reservoir, it is essential to investigate the photochemical reactivity of the reservoir and its effect on photodegradation of OMPs. On the other hand, some photochemistry parameters such as steady-state concentration ([PPRI]ss), and quantum yield (ФPPRI) of PPRIs have relation with optical parameters such as dissolved organic carbon (DOC), spectra slope ratio, and so on which can be easily determined. These relationships are vital for construction of OMPs photodegradation rate prediction model and further sound management of chemicals. However, the relationship has been rarely studied for reservoirs. Moreover, the currently observed relationships bear big error indicating further studies with larger database are needed. </p>
+      
+
+  </div>
   
   <!-- The Talks Section -->
   <div class="w3-container w3-light-grey w3-padding-32" id="talks">
