--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
 
 
   <div class="w3-container w3-padding-32" id="education">
-    <h2>Education</h2>
+    <h2 class = "w3-container w3-light-grey w3-padding-32" >Education</h2>
       <p> <li>
         Oct. 2020-present, PhD candidate, Tokyo Institute of Technology, Civil Engineering
       </li>
@@ -163,7 +163,7 @@
   </div>
 
   <div class="w3-container w3-padding-32" id="research">
-    <h2>Research</h2>
+    <h2 class = "w3-container w3-light-grey w3-padding-32" >Research</h2>
 
       <p><strong>Research Field: Environmental Photochemistry</strong></p>
       <p><strong>Modeling quantum yield of photo-production of reactive intermediates in freshwater environment<strong></p>
@@ -174,8 +174,8 @@
   </div>
   
   <!-- The Talks Section -->
-  <div class="w3-container w3-light-grey w3-padding-32" id="talks">
-    <h2>Talks</h2>
+  <div class="w3-container w3-padding-32" id="talks">
+    <h2 class = "w3-container w3-light-grey w3-padding-32" >Talks</h2>
     <!-- 
       <p><li> 10/2021, Vision Transformer at <a href="http://valser.org/2021/#/tutorial">VALSE 2021, Hangzhou, China</a>.</li></p>
 	    <p><li> 05/2021, Adder Neural Network at <a href="https://haet2021.github.io/speakers.html">HAET ICLR 2021 workshop</a>. Thanks <a href="https://datawisdom.ca/">Vahid</a> for the invitation.</li></p>
@@ -186,7 +186,7 @@
 
  <!-- The Publications Section -->
   <div class="w3-container w3-padding-32"" id="publications">
-    <h2>Publications</h2>
+    <h2 class = "w3-container w3-light-grey w3-padding-32" >Publications</h2>
     <ol>
 
       <p>
@@ -250,7 +250,7 @@
 
  <!-- The Publications Section -->
   <div class="w3-container w3-padding-32" id="award">
-    <h2>Awards</h2>
+    <h2 class = "w3-container w3-light-grey w3-padding-32" >Awards</h2>
     <p> <li>2022.04-2024.03, JSPS Research Fellowship for Young Scientists-DC2 (日本学術振興会特別研究員DC2) </li></p>
     <p> <li>2021.11.09 RSC Environmental Science Best Oral Presentation Prize</li></p>
         <p> Photochemistry of Dissolved Organic Matter Extracted from Coastal Seawater: Excited Triplet-States and Contents of Phenolic Moieties. The 41st International Symposium on Halogenated Persistent Organic Pollutants, Control Strategies and Technologies.</p>
