--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 
 <!DOCTYPE html>
-<html xmlns=""http://www.GuoZhongyu.github.io" xml:lang="en">
+<html xmlns=""https://zhongyuguo.netlify.app" xml:lang="en">
 
 <head>
 
@@ -102,7 +102,7 @@
 
 <!--ojects Section -->
   <div class="w3-container w3-padding-32" id="projects">
-    <h2>Projects</h2>
+    <h2 class = "w3-container w3-light-grey w3-padding-32" >Projects</h2>
 
 
 
@@ -143,20 +143,20 @@
 
   <div class="w3-container w3-padding-32" id="education">
     <h2 class = "w3-container w3-light-grey w3-padding-32" >Education</h2>
-      <p> <li>
-        Oct. 2020-present, PhD candidate, Tokyo Institute of Technology, Civil Engineering
+      <p> <li><strong>
+        Oct. 2020-present, PhD candidate, Tokyo Institute of Technology, Civil Engineering <strong>
       </li>
-      <p>Supervisor: Prof. & Dr. Yoshimura Chihiro</p>
+      <p> <strong>Supervisor: Prof. & Dr. Yoshimura Chihiro</strong></p>
+      </p>
+
+      <p> <li><strong>
+        Sep. 2017-Jul. 2020, Master, Dalian University of Technology, Environmental Engineering</strong>
+      </li>
+      <p><strong>Supervisor: Prof.& Dr. Jingwen Chen</strong> </p>
       </p>
 
       <p> <li>
-        Sep. 2017-Jul. 2020, Master, Dalian University of Technology, Environmental Engineering,
-      </li>
-      <p>Supervisor: Prof.& Dr. Jingwen Chen </p>
-      </p>
-
-      <p> <li>
-        Sep. 2013-Jul. 2017, Bachelor, Dalian Maritime University, Environmental Science and Engineering
+      <strong>Sep. 2013-Jul. 2017, Bachelor, Dalian Maritime University, Environmental Science and Engineering</strong>
       </li>
       </p>
 
