--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
   <div class="w3-padding-64 w3-text-light-grey w3-large" style="font-weight:bold">
     <a href="#home" class="w3-bar-item w3-button">Home</a>
     <a href="#education" class="w3-bar-item w3-button">Education</a>
-    <a href="#resarch" class="w3-bar-item w3-button">Research</a>
+    <a href="#research" class="w3-bar-item w3-button">Research</a>
     <a href="#projects" class="w3-bar-item w3-button">Projects</a>
     <a href="#publications" class="w3-bar-item w3-button">Publications</a>
     <a href="#talks" class="w3-bar-item w3-button">Talks</a>
