--- a/index.html
+++ b/index.html
@@ -179,12 +179,45 @@
   <!-- The Talks Section -->
   <div class="w3-container w3-padding-32" id="talks">
     <h2 class = "w3-container w3-light-grey w3-padding-32" >Talks</h2>
-    <!-- 
-      <p><li> 10/2021, Vision Transformer at <a href="http://valser.org/2021/#/tutorial">VALSE 2021, Hangzhou, China</a>.</li></p>
-	    <p><li> 05/2021, Adder Neural Network at <a href="https://haet2021.github.io/speakers.html">HAET ICLR 2021 workshop</a>. Thanks <a href="https://datawisdom.ca/">Vahid</a> for the invitation.</li></p>
-      <p><li> 06/2020, "<a href="http://valser.org/webinar/slide/slides/20200603/%E6%A8%A1%E5%9E%8B%E5%8E%8B%E7%BC%A9-%E5%B7%A5%E4%B8%9A%E7%95%8C%E5%92%8C%E5%AD%A6%E6%9C%AF%E7%95%8C%E7%9A%84%E5%B7%AE%E5%BC%82.pdf">AI on the Edge - Discussion on the Gap Between Industry and Academia</a>" at <a  href="http://valser.org/"><strong>VALSE</strong></a> Webinar.</li></p>
-      <p><li> 05/2020, "<a href="https://www.bilibili.com/video/av925692420/">Edge AI: Progress and Future Directions</a>" at <a href="https://www.qbitai.com/"> <strong>QbitAI</strong></a> using <a  href="https://www.bilibili.com/"><strong>bilibili</strong></a>.</li></p>
-  -->
+
+    <p>
+      <li>
+        2022.11.25, Chiba, Japan. Oral presentation. 
+        <p>
+          &nbsp;&nbsp;&nbsp;&nbsp;The 38th symposium and annual conference of Japanese Humic Substances Society.
+        </p>
+        <p>
+          &nbsp;&nbsp;&nbsp;&nbsp;Title: Modeling Quantum Yield for Photo-production of Reactive Intermediates in Reservoirs in Japan.
+        </p>
+      </li>
+    </p>
+
+    <p>
+      <li>
+        2021.09.15, Online. (Oral presentation)
+        <p>
+          &nbsp;&nbsp;&nbsp;&nbsp;The 24th Japan Society on Water Environment conference
+        </p>
+        <p>
+          &nbsp;&nbsp;&nbsp;&nbsp;Title: Photochemistry of Dissolved Organic Matter Extracted from Coastal Seawater: Excited Triplet-States and Contents of Phenolic Moieties.
+        </p>
+      </li>
+    </p>
+
+    <p>
+      <li>
+        2021.11.09, Online. (Oral presentation, <a style="color: #e36e0fe9"><strong>RSC ENVIRONMENTAL SCIENCE BEST ORAL PRESENTATION PRIZE</strong></a> )
+        <p>
+          &nbsp;&nbsp;&nbsp;&nbsp;The 41st International Symposium on Halogenated Persistent Organic Pollutants, Control Strategies and Technologies.
+        </p>
+        <p>
+          &nbsp;&nbsp;&nbsp;&nbsp;Title: Photochemistry of Dissolved Organic Matter Extracted from Coastal Seawater: Excited Triplet-States and Contents of Phenolic Moieties.
+        </p>
+      </li>
+      
+
+    </p>
+    
   </div>
 
  <!-- The Publications Section -->
