--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
 
     <p>
       <li>
-        2022.11.25, Chiba, Japan. Oral presentation. 
+        2022.11.25, Chiba, Japan. (Oral presentation)
         <p>
           &nbsp;&nbsp;&nbsp;&nbsp;The 38th symposium and annual conference of Japanese Humic Substances Society.
         </p>
@@ -217,7 +217,7 @@
       
 
     </p>
-    
+
   </div>
 
  <!-- The Publications Section -->
