--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     <a href="#home" class="w3-bar-item w3-button">Home</a>
     <a href="#education" class="w3-bar-item w3-button">Education</a>
     <a href="#research" class="w3-bar-item w3-button">Research</a>
-    <a href="#projects" class="w3-bar-item w3-button">Projects</a>
+    <!-- <a href="#projects" class="w3-bar-item w3-button">Projects</a> -->
     <a href="#publications" class="w3-bar-item w3-button">Publications</a>
     <a href="#talks" class="w3-bar-item w3-button">Talks</a>
     <a href="#award" class="w3-bar-item w3-button">Awards</a>
@@ -101,8 +101,8 @@
   </div>
 
 <!--ojects Section -->
-  <div class="w3-container w3-padding-32" id="projects">
-    <h2 class = "w3-container w3-light-grey w3-padding-32" >Projects</h2>
+  <!-- <div class="w3-container w3-padding-32" id="projects"> -->
+    <!-- <h2 class = "w3-container w3-light-grey w3-padding-32" >Projects</h2> -->
 
 
 
