--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     <a href="#publications" class="w3-bar-item w3-button">Publications</a>
     <a href="#talks" class="w3-bar-item w3-button">Talks</a>
     <a href="#award" class="w3-bar-item w3-button">Awards</a>
-    <a href="#contacts" class="w3-bar-item w3-button">Contacts</a>
+    <!-- <a href="#contacts" class="w3-bar-item w3-button">Contacts</a> -->
    <!--<a href="#service" class="w3-bar-item w3-button">Services</a> -->
 
   </div>
@@ -347,7 +347,7 @@
     </p>
   </div>
 
- <!-- The Publications Section -->
+
   <div class="w3-container w3-padding-32" id="award">
     <h2 class = "w3-container w3-light-grey w3-padding-32" >Awards</h2>
     <p> <li>2022.04-2024.03, JSPS Research Fellowship for Young Scientists-DC2 (日本学術振興会特別研究員DC2) </li></p>
@@ -358,10 +358,14 @@
     <p> <li>2020.11-2021.3, Japan Student Services Organization, JASSO (独立行政法人日本学生支援機構奨学金) </li> </p>
     <p> <li>2018, China National scholarship (Dalian University of Technology) </li></p>
     <p> <li>2016, The first place of Chinese freestyle skating championship in battle slide (Dalian Maritime University)</li></p>
-
   </div>
 
-  <!-- End page content -->
+  <!-- <div class="w3-container w3-padding-32", id="contacts">
+    <h2 class="w3-container w3-light-grey w3-padding-32" >Contacts</h2>
+    <p> <li> </li> </p>
+
+  </div> -->
+
 </div>
 
 
