--- a/index.html
+++ b/index.html
@@ -98,47 +98,9 @@
           E-mail: zhongyuguo2019@gmail.com
         </p>
         </tbody></table>
-  </div>
+    </div>
 
-<!--ojects Section -->
-  <!-- <div class="w3-container w3-padding-32" id="projects"> -->
-    <!-- <h2 class = "w3-container w3-light-grey w3-padding-32" >Projects</h2> -->
-
-
-
-<!--
-  <p class="w3-justify">
-        Actually, model compression is a kind of technique for developing portable deep neural networks with lower memory and computation costs. I have done several projects in Huawei including some smartphones' applications in 2019 and 2020 (e.g. Mate 30 and Honor V30). Currently, I am leading the AdderNet project, which aims to develop a series of deep learning models using only additions (<a href="https://www.reddit.com/r/MachineLearning/comments/ekw2s1/r_addernet_do_we_really_need_multiplications_in/">Discussions on Reddit</a>).
-    </p>
-
-        <h4><li>Adder Neural Networks</li></h4>
-        <img style="width:96%;" src="images/AdderNet.jpg"> 
-        <p class="w3-justify">
-        <a style="color: #447ec9" href="https://github.com/huawei-noah/AdderNet">Project Page</a> | <a style="color: #447ec9" href="https://arxiv.org/pdf/2101.10015.pdf">Hardware Implementation</a>
-        </p>
-        <p class="w3-justify">
-        I would like to say, <span style="color:red">AdderNet is very cool!</span> The initial idea was came up in about 2017 when climbing with some friends at Beijing. By replacing all convolutional layers (except the first and the last layers), we now can obtain comparable performance on ResNet architectures. In addition, to make the story more complete, we recent release the hardware implementation and some quantization methods. The results are quite encouraging, we can reduce both <strong>the energy consumption and thecircuit areas significantly without affecting the performance</strong>. Now, we are working on more applications to reduce the costs of launching AI algorithms such as low-level vision, detection, and NLP tasks.
-        </p> 
-
-        <h4><li>GhostNet on MindSpore: SOTA Lightweight CV Networks</li></h4>
-        <img style="width:96%;" src="images/GhostNet.png"> 
-        <p class="w3-justify">
-        <a style="color: #447ec9" href="https://live.huawei.com/huaweiconnect/meeting/cn/5872.html">Huawei Connect (HC) 2020</a> | <a style="color: #447ec9" href="https://www.mindspore.cn/resources/hub">MindSpore Hub</a>
-        </p>
-        <p class="w3-justify">
-        The initial verison of GhostNet was accepted by CVPR 2020, which achieved SOTA performance on ImageNet: <span style="color:red">75.7%</span> top1 acc with only <span style="color:red">226M FLOPS</span>. In the current version, we release a series computer vision models (e.g. int8 quantization, detection, and larger networks) on <strong>MindsSpore 1.0</strong> and <strong>Mate 30 Pro (Kirin 990)</strong>.
-        </p> 
-
-        <h4><li>AI on Ascend: Real-Time Video Style Transfer</li></h4>
-        <img style="width:32%;" src="images/atlas200.png"> &nbsp&nbsp <img style="width:60%;" src="images/video.gif">
-        <p class="w3-justify">
-        <a style="color: #447ec9" href="https://www.huaweicloud.com/intl/en-us/HDC.Cloud.html">Huawei Developer Conference (HDC) 2020</a> | <a style="color: #447ec9" href="https://developer.huaweicloud.com/exhibition/Atlas_neural_style.html">Online Demo</a>
-        </p>
-        <p class="w3-justify">
-        This project aims to develop a video style transfer system on the <strong>Huawei Atlas 200 DK AI developer Kit</strong>. The latency of the original model for processing one image is about <span style="color:red">630ms</span>. After accelerating it using our method, the lantency now is about <span style="color:red">40ms</span>. 
-        </p>  
--->
-  </div>
+</div>
 
 
   <div class="w3-container w3-padding-32" id="education">
@@ -350,7 +312,8 @@
     <h2 class = "w3-container w3-light-grey w3-padding-32" >Awards</h2>
     <p> <li>2022.04-2024.03, JSPS Research Fellowship for Young Scientists-DC2 (日本学術振興会特別研究員DC2) </li></p>
     <p> <li>2021.11.09 RSC Environmental Science Best Oral Presentation Prize</li></p>
-        <p> Photochemistry of Dissolved Organic Matter Extracted from Coastal Seawater: Excited Triplet-States and Contents of Phenolic Moieties. The 41st International Symposium on Halogenated Persistent Organic Pollutants, Control Strategies and Technologies.</p>
+        <p> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Photochemistry of Dissolved Organic Matter Extracted from Coastal Seawater: Excited Triplet-States and Contents of Phenolic Moieties.</p>
+        <p> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;The 41st International Symposium on Halogenated Persistent Organic Pollutants, Control Strategies and Technologies.</p>
     <p> <li>2021.4-2022.4, Tokyo Tech Human Resource Development Fellowship for Doctoral Students (東京工業大学高度人材育成博士フェローシップ)</li> </p>
     <p> <li>2020.11-2021.3, Tokyo Tech Tsubame Scholarship for Doctoral Students (東京工業大学つばめ奨学金)</li> </p>
     <p> <li>2020.11-2021.3, Japan Student Services Organization, JASSO (独立行政法人日本学生支援機構奨学金) </li> </p>
