--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
 <nav class="w3-sidebar w3-bar-block w3-black w3-collapse w3-top w3-right" style="z-index:3;width:150px" id="mySidebar">
   <div class="w3-container w3-display-container w3-padding-16">
     <h3><b>GUO</b></h3>
+  </div>
   <div class="w3-padding-64 w3-text-light-grey w3-large" style="font-weight:bold">
     <a href="#home" class="w3-bar-item w3-button">Home</a>
     <a href="#education" class="w3-bar-item w3-button">Education</a>
@@ -66,7 +67,7 @@
     <a href="#award" class="w3-bar-item w3-button">Awards</a>
     <!-- <a href="#contacts" class="w3-bar-item w3-button">Contacts</a> -->
    <!--<a href="#service" class="w3-bar-item w3-button">Services</a> -->
-
+  </div>
 </nav>
 
 <!-- Top menu on small screens -->
@@ -98,8 +99,10 @@
         </tbody></table>
     </div>
 
-</div>
-
+<!--ojects Section -->
+<!-- <div class="w3-container w3-padding-32" id="projects">
+  <h2 class = "w3-container w3-light-grey w3-padding-32" >Projects</h2>
+</div> -->
 
 <div class="w3-container w3-padding-32" id="education">
     <h2 class = "w3-container w3-light-grey w3-padding-32" >Education</h2>
