--- a/index.html
+++ b/index.html
@@ -88,13 +88,13 @@
 
 <!-- The Home Section -->
     <div class="w3-container w3-center w3-padding-32" id="home">
-      <img style="width: 80%;max-width: 320px" alt="profile photo" src="images/top.jpg">
+      <img style="width: 50%; max-width: 160px" alt="profile photo" src="images/top.jpg">
       <h1>Zhongyu GUO</h1>
-        <p class="w3-justify" style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;max-width:600px">
+        <p class="w3-justify" style="width:50%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;max-width:600px">
           
         </p>
         <p class="w3-center">
-          E-mail: zhongyuguo2019@gmail.com
+          <strong>E-mail: zhongyuguo2019@gmail.com</strong>
         </p>
         </tbody></table>
     </div>
@@ -110,7 +110,7 @@
         Oct. 2020-present, PhD candidate, Tokyo Institute of Technology, Civil Engineering <strong>
       </li>
       <p> &nbsp;&nbsp;&nbsp;&nbsp;<strong>Supervisor: Prof. & Dr. Yoshimura Chihiro</strong> 
-      <a href="https://sites.google.com/site/waterenvironmentlab/home">Yoshi Lab</a>
+      <a style="color: #447ec9" href="https://sites.google.com/site/waterenvironmentlab/home">Yoshi Lab</a>
       </p> 
       </p>
 
@@ -118,7 +118,7 @@
         Sep. 2017-Jul. 2020, Master, Dalian University of Technology, Environmental Engineering</strong>
       </li>
       <p>&nbsp;&nbsp;&nbsp;&nbsp;<strong>Supervisor: Prof.& Dr. Jingwen Chen</strong>
-      <a href="http://faculty.dlut.edu.cn/1997011052/en/yjgk/753163/list/index.htm">Jingwen CHEN Lab</a>
+      <a style="color: #447ec9" href="http://faculty.dlut.edu.cn/1997011052/en/yjgk/753163/list/index.htm">Jingwen CHEN Lab</a>
       </p>
 
       <p> <li>
