--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 
 <!DOCTYPE html>
-<html xmlns=""https://zhongyuguo.netlify.app" xml:lang="en">
+<html xmlns=""https://zhongyuguo.com" xml:lang="en">
 
 <head>
 
