--- a/index.html
+++ b/index.html
@@ -128,8 +128,11 @@
 </div>
 
 <div class="w3-container w3-padding-32" id="research">
+
     <h2 class = "w3-container w3-light-grey w3-padding-32" >Research</h2>
 
+      <img style="width: 100%; max-width: 900px" src="images/research.jpeg">
+      <p>Source: <a style="color: #447ec9" href="https://doi.org/10.1016/j.watres.2022.118236"> Guo Z.Y. et al. Water Res. 231, 118236.</a></p> 
       <p><strong>Research Field: Environmental Photochemistry</strong></p>
       <p><strong>Modeling quantum yield of photo-production of reactive intermediates in freshwater environment<strong></p>
       <p>Over 140,000 kinds of chemicals are in use in human daily life leading to these chemicals entering the environmental water bodies inevitably. Although many of them are present at a low concentration, some of them raise considerable toxicological concerns. Thus, it is essential to investigate their fate for the ecological risk assessment. Photodegradation is proved to be an important pathway for attenuations of organic micropollutants (OMPs) in sunlit surface waters. OMPs can be removed through indirect photodegradation involving a variety of photochemically produced reactive intermediates (PPRIs) such as excited triplet-state of dissolved organic matter (3DOM*), HO·, singlet oxygen (1O2) and so on. </p>
