--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 </div> -->
 
 <div class="w3-container w3-padding-32" id="education">
-    <h2 class = "w3-container w3-light-grey w3-padding-32" >Education</h2>
+    <h2 class = "w3-container w3-light-grey w3-padding-32" ><b>Education</b></h2>
       <p> <li><strong>
         Oct. 2020-present, PhD candidate, Tokyo Institute of Technology, Civil Engineering <strong>
       </li>
@@ -129,10 +129,13 @@
 
 <div class="w3-container w3-padding-32" id="research">
 
-    <h2 class = "w3-container w3-light-grey w3-padding-32" >Research</h2>
+    <h2 class = "w3-container w3-light-grey w3-padding-32" ><b>Research</b></h2>
 
       <img style="width: 100%; max-width: 900px" src="images/research.jpeg">
-      <p>Source: <a style="color: #447ec9" href="https://doi.org/10.1016/j.watres.2022.118236"> Guo Z.Y. et al. Water Res. 231, 118236.</a></p> 
+      <div class="w3-right-align">
+        <p>Source: <a style="color: #447ec9" href="https://doi.org/10.1016/j.watres.2022.118236"> Guo Z.Y. et al. Water Res. 231, 118236.</a></p> 
+
+      </div>
       <p><strong>Research Field: Environmental Photochemistry</strong></p>
       <p><strong>Modeling quantum yield of photo-production of reactive intermediates in freshwater environment<strong></p>
       <p>Over 140,000 kinds of chemicals are in use in human daily life leading to these chemicals entering the environmental water bodies inevitably. Although many of them are present at a low concentration, some of them raise considerable toxicological concerns. Thus, it is essential to investigate their fate for the ecological risk assessment. Photodegradation is proved to be an important pathway for attenuations of organic micropollutants (OMPs) in sunlit surface waters. OMPs can be removed through indirect photodegradation involving a variety of photochemically produced reactive intermediates (PPRIs) such as excited triplet-state of dissolved organic matter (3DOM*), HO·, singlet oxygen (1O2) and so on. </p>
@@ -143,7 +146,7 @@
   
   <!-- The Talks Section -->
 <div class="w3-container w3-padding-32" id="talks">
-    <h2 class = "w3-container w3-light-grey w3-padding-32" >Talks</h2>
+    <h2 class = "w3-container w3-light-grey w3-padding-32" ><b>Talks</b></h2>
 
     <p>
       <li>
@@ -185,7 +188,7 @@
 
  <!-- The Publications Section -->
 <div class="w3-container w3-padding-32"" id="publications">
-    <h2 class = "w3-container w3-light-grey w3-padding-32" >Publications</h2>
+    <h2 class = "w3-container w3-light-grey w3-padding-32" ><b>Publications</b></h2>
     <ol>
 
       <p>
@@ -309,7 +312,7 @@
 
 
 <div class="w3-container w3-padding-32" id="award">
-    <h2 class = "w3-container w3-light-grey w3-padding-32" >Awards</h2>
+    <h2 class = "w3-container w3-light-grey w3-padding-32" ><b>Awards</b></h2>
     <p> <li>2022.04-2024.03, JSPS Research Fellowship for Young Scientists-DC2 (日本学術振興会特別研究員DC2) </li></p>
     <p> <li>2021.11.09 RSC Environmental Science Best Oral Presentation Prize</li></p>
         <p> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Photochemistry of Dissolved Organic Matter Extracted from Coastal Seawater: Excited Triplet-States and Contents of Phenolic Moieties.</p>
