--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
         <div class="w3-right-align">
           <p>Source: <a style="color: #447ec9"
               href="https://doi.org/10.1016/j.watres.2022.118236"> Guo Z.Y. et
-              al. Water Res. 231, 118236.</a></p>
+              al. Water Res. (2022) 231, 118236.</a></p>
 
         </div>
         <p><strong>Research Field: Environmental Photochemistry</strong></p>
@@ -208,9 +208,9 @@
                   Wang, J.Q.*, 2022.
                   Photodegradation of Organic Micropollutants in Aquatic
                   Environment: Importance, Factors and Processes.
-                  Water Res. 231, 118236.</li>
+                  Water Res. 231, 118236.
                 <a style="color: #447ec9"
-                  href="https://doi.org/10.1016/j.watres.2022.118236">https://doi.org/10.1016/j.watres.2022.118236</a>
+                  href="https://doi.org/10.1016/j.watres.2022.118236">[link]</a></li>
               </p>
 
               <p>
@@ -220,30 +220,19 @@
                   Photochemistry of dissolved organic matter extracted from
                   coastal seawater: Excited triplet-states and contents of
                   phenolic moieties.
-                  Water Res. 188: 116568.</li>
+                  Water Res. 188: 116568.
                 <a style="color: #447ec9"
-                  href="https://doi.org/10.1016/j.watres.2020.116568">https://doi.org/10.1016/j.watres.2020.116568</a>
+                  href="https://doi.org/10.1016/j.watres.2020.116568">[link]</a></li>
               </p>
 
-              <!-- <p>
-                <li><a style="color: #447ec9"><strong>Guo, Z.Y.</strong></a>,
-                  Chen, J.W.*, Zhang, S.Y., Chen, X., Wang, J.Q., Cui, F.F.,
-                  2020.
-                  Effects of dissolved organic matter on photochemical
-                  transformation of organic micropollutants in natural waters
-                  (in Chinese).
-                  Chin. Sci. Bull. 65, (26): 2786-2803</li>
-                <a style="color: #447ec9"
-                  href="https://doi.org/10.1360/TB-2020-0791">https://doi.org/10.1360/TB-2020-0791</a>
-              </p> -->
               <p>
                 <li><a style="color: #447ec9"><strong>Guo, Z.Y.</strong></a>,
                   Hatakeyama, T., Yoshimura, C.*, Wang, T.T., Hatano., Y., 2022.
                   Relationship between Influent Sewage Quality and Sewershed
                   Characteristics in Tokyo City.
-                  Journal of Water and Health. 20, 972-983. </li>
+                  Journal of Water and Health. 20, 972-983. 
                 <a style="color: #447ec9"
-                  href="https://doi.org/10.2166/wh.2022.022">https://doi.org/10.2166/wh.2022.022</a>
+                  href="https://doi.org/10.2166/wh.2022.022">[link]</a></li>
               </p>
 
               <p>
@@ -252,20 +241,19 @@
                   Niu, J.F., 2021.
                   Mechanism of bicarbonate enhancing the photodegradation of
                   β-blockers in natural waters.
-                  Water Res. 197: 117078. </li>
+                  Water Res. 197: 117078. 
                 <a style="color: #447ec9"
-                  href="https://doi.org/10.1016/j.watres.2021.117078">https://doi.org/10.1016/j.watres.2021.117078</a>
+                  href="https://doi.org/10.1016/j.watres.2021.117078">[link]</a></li>
               </p>
               <p>
                 <li>Wang, J.Q., Wang, K., Guo, Y.C., Ye, Z.M., <a style="color:
                     #447ec9"><strong>Guo, Z.Y.</strong></a>, Lei, Y., Yang, X.
                   Niu, J.F., 2021.
                   Dichlorine radicals (Cl2•-) promote the photodegradation of
-                  propranolol in estuarine and coastal waters. Journal of
-                  Hazardous materials.
-                  J. Hazar. Mater. 414: 125536.</li>
+                  propranolol in estuarine and coastal waters.
+                  J. Hazar. Mater. 414: 125536.
                 <a style="color: #447ec9"
-                  href="https://doi.org/10.1016/j.jhazmat.2021.125536">https://doi.org/10.1016/j.jhazmat.2021.125536</a>
+                  href="https://doi.org/10.1016/j.jhazmat.2021.125536">[link]</a></li>
               </p>
               <p>
                 <li>Wang, J.Q., Chen, J.W., Qiao, X.L., Zhang, Y.N., Uddin, M.,
@@ -273,9 +261,9 @@
                   2019.
                   Disparate effects of DOM extracted from coastal seawaters and
                   freshwaters on photodegradation of 2,4-Dihydroxybenzophenone.
-                  Water Res. 151: 280-287.</li>
+                  Water Res. 151: 280-287.
                 <a style="color: #447ec9"
-                  href="https://doi.org/10.1016/j.watres.2018.12.045">https://doi.org/10.1016/j.watres.2018.12.045</a>
+                  href="https://doi.org/10.1016/j.watres.2018.12.045">[link]</a></li>
               </p>
 
               <p>
@@ -284,8 +272,8 @@
                   Yoshimura, C*. (2023)
                   Integration of Photodegradation Process of Organic
                   Micropollutants to a Vertically One-Dimensional Lake Model.
-                  Sustainability. 15, 2082. DOI:
-                  https://doi.org/10.3390/su15032082
+                  Sustainability. 15, 2082. <a style="color: #447ec9"
+                  href="https://doi.org/10.3390/su15032082">[link]</a></li>
                 </li>
               </p>
 
@@ -294,9 +282,9 @@
                       Z.Y.</strong></a>, Yoshimura, C.*, (2023)
                   Effect of dissolved organic matter property on the regrowth of
                   Escherichia coli after ultraviolet disinfection.
-                  J. Water Process. Eng. 51, 103383. </li>
+                  J. Water Process. Eng. 51, 103383.
                 <a style="color: #447ec9"
-                  href="https://doi.org/10.1016/j.jwpe.2022.103383">https://doi.org/10.1016/j.jwpe.2022.103383</a>
+                  href="https://doi.org/10.1016/j.jwpe.2022.103383">[link]</a> </li>
               </p>
 
               <p>
@@ -306,9 +294,9 @@
                   Photochemical Degradation Mechanisms and Ecotoxicity of
                   Propranolol in Natural Water under Simulated and Natural
                   Sunlight Irradiation.
-                  Sep. Purif. Technol. </li>
+                  Sep. Purif. Technol. 
                 <a style="color: #447ec9"
-                  href="https://doi.org/10.1016/j.seppur.2023.123867">https://doi.org/10.1016/j.seppur.2023.123867</a>
+                  href="https://doi.org/10.1016/j.seppur.2023.123867">[link]</a></li>
               </p>
 
               <p>
@@ -318,11 +306,9 @@
                   Potential effect of atmospheric condition on incident light
                   and photo-production of reactive intermediates in freshwater
                   systems.
-                  Environmental Advances. 11, 100346. DOI:
-                  https://doi.org/10.1016/j.envadv.2023.100346
-                </li>
+                  Environmental Advances. 11, 100346.
                 <a style="color: #447ec9"
-                  href="https://doi.org/10.1016/j.envadv.2023.100346">https://doi.org/10.1016/j.envadv.2023.100346</a>
+                  href="https://doi.org/10.1016/j.envadv.2023.100346">[link]</a></li>
               </p>
 
               <p>
@@ -332,9 +318,9 @@
                   Photodegradation of Propranolol in Surface Waters: An
                   Important Role of Carbonate Radical and Enhancing Toxicity
                   Phenomenon.
-                  Chemosphere. 297, 134106.</li>
+                  Chemosphere. 297, 134106.
                 <a style="color: #447ec9"
-                  href="https://doi.org/10.1016/j.chemosphere.2022.134106">https://doi.org/10.1016/j.chemosphere.2022.134106</a>
+                  href="https://doi.org/10.1016/j.chemosphere.2022.134106">[link]</a></li>
               </p>
 
               <p>
@@ -343,9 +329,9 @@
                   J.F.*, 2022.
                   Elucidating the role of phosphorus doping in Co and Ni-loaded
                   carbon nitride photocatalysts for nefazodone degradation.
-                  Environ. Funct. Mater. 1, 114-120. </li>
+                  Environ. Funct. Mater. 1, 114-120. 
                 <a style="color: #447ec9"
-                  href="https://doi.org/10.1016/j.efmat.2022.05.001">https://doi.org/10.1016/j.efmat.2022.05.001</a>
+                  href="https://doi.org/10.1016/j.efmat.2022.05.001">[link]</a></li>
               </p>
 
 
@@ -354,9 +340,9 @@
                   Wang, J.Q.*, Ye, Z.M., Zhang, L.L,. Niu., J.F., 2021.
                   Photodegradation of three antidepressants in natural waters:
                   Important roles of dissolved organic matter and nitrate.
-                  Sci. Total. Environ. 802: 149825.</li>
+                  Sci. Total. Environ. 802: 149825.
                 <a style="color: #447ec9"
-                  href="https://doi.org/10.1016/j.scitotenv.2021.149825">https://doi.org/10.1016/j.scitotenv.2021.149825</a>
+                  href="https://doi.org/10.1016/j.scitotenv.2021.149825">[link]</a></li>
               </p>
 
               <p>
@@ -365,9 +351,9 @@
                   2021.
                   Photodegradation of acebutolol in natural waters: important
                   roles of carbonate radical and hydroxyl radical.
-                  Chemosphere. 287, 132318. </li>
+                  Chemosphere. 287, 132318. 
                 <a style="color: #447ec9"
-                  href="https://doi.org/10.1016/j.chemosphere.2021.132318">https://doi.org/10.1016/j.chemosphere.2021.132318</a>
+                  href="https://doi.org/10.1016/j.chemosphere.2021.132318">[link]</a></li>
               </p>
 
 
