--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 <div class="w3-container w3-padding-32" id="education">
   <h2 class="w3-container w3-light-grey w3-padding-32"><b>Education</b></h2>
   <p> <li><strong>
-        Oct. 2020-present, PhD candidate, Tokyo Institute of Technology, Civil
+        Oct. 2020-Dec. 2023, PhD, Tokyo Institute of Technology, Civil
         Engineering <strong>
         </li>
         <p> &nbsp;&nbsp;&nbsp;&nbsp;<strong>Supervisor: Prof. & Dr. Yoshimura
