--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 
     <!-- The Home Section -->
     <div class="w3-container w3-center w3-padding-32" id="home">
-      <img style="width: 100%; max-width: 200px" alt="profile photo"
+      <img style="width: 100%; " alt="profile photo"
         src="images/top.240916.png">
       <h1>Zhongyu GUO</h1>
       <p class="w3-justify"
