--- a/index.html
+++ b/index.html
@@ -100,6 +100,9 @@
       <p class="w3-center">
         <strong>E-mail: zhongyuguo2019@gmail.com</strong>
       </p>
+      <p class="w3-center">
+        <strong>Currenly: Postdoctoral Researcher, IRCELYON, CNRS, France</strong>
+      </p>
     </tbody></table>
 </div>
 
