--- a/index.html
+++ b/index.html
@@ -60,11 +60,13 @@
         style="font-weight:bold">
         <a href="#home" class="w3-bar-item w3-button">Home</a>
         <a href="#education" class="w3-bar-item w3-button">Education</a>
+        <a href="#work experience" class="w3-bar-item w3-button">Experience</a>
         <a href="#research" class="w3-bar-item w3-button">Research</a>
         <!-- <a href="#projects" class="w3-bar-item w3-button">Projects</a> -->
         <a href="#publications" class="w3-bar-item w3-button">Publications</a>
         <a href="#award" class="w3-bar-item w3-button">Awards</a>
         <a href="#talks" class="w3-bar-item w3-button">Talks</a>
+        <a href="#students" class="w3-bar-item w3-button">Students</a>
         
         <!-- <a href="#contacts" class="w3-bar-item w3-button">Contacts</a> -->
         <!--<a href="#service" class="w3-bar-item w3-button">Services</a> -->
@@ -584,7 +586,7 @@
 
         </div>
 
-        <div class="w3-container w3-padding-32" id="talks">
+        <div class="w3-container w3-padding-32" id="students">
           <h2 class="w3-container w3-light-grey w3-padding-32"><b>Mentored Students</b></h2>
           <p>1. GUO, Y.C., Master student in Dongguan University of Technology 
             and Ph.D. student in North China Electric Power University.</p> 
