--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
         <strong>E-mail: zhongyuguo2019@gmail.com</strong>
       </p>
       <p class="w3-center">
-        <strong>Currenly: Postdoctoral Researcher, IRCELYON, CNRS, France</strong>
+        <strong>Currently: Postdoctoral Researcher, IRCELYON, CNRS, France</strong>
       </p>
     </tbody></table>
 </div>
