--- a/index.html
+++ b/index.html
@@ -268,8 +268,8 @@
                   in Reservoirs and Its Relation to the Water Matrix.
                   <a style="color: #447ec9">Water Res.</a> 
                   244, 120456.
-                <a style="color: #447ec9" 
-                  href="https://doi.org/10.1016/j.watres.2023.120456"></a>[link]</li>
+                <a style="color: #447ec9"
+                  href="https://doi.org/10.1016/j.watres.2023.120456">[link]</a></li>
               </p>
               
               <p>
