--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
         Oct. 2020-Dec. 2023, PhD, Tokyo Institute of Technology, Civil
         Engineering <strong>
         </li>
-        <p> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<strong>Supervisor: Prof. & Dr. 
+        <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<strong>Supervisor: Prof. & Dr. 
           </strong>
           <a style="color: #447ec9"
             href="https://sites.google.com/site/waterenvironmentlab/home">Yoshimura Chihiro
@@ -133,7 +133,7 @@
             Sep. 2017-Jul. 2020, Master, Dalian University of Technology,
             Environmental Engineering</strong>
         </li>
-        <p>&nbsp;&nbsp;&nbsp;&nbsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;<strong>Supervisor: Prof.& Dr. Jingwen Chen</strong>
+        <p>&nbsp;&nbsp;&nbsp;&nbsp;&emsp;<strong>Supervisor: Prof.& Dr. Jingwen Chen</strong>
           <a style="color: #447ec9"
             href="http://faculty.dlut.edu.cn/1997011052/en/yjgk/753163/list/index.htm">(Jingwen CHEN Lab)
           </a>
@@ -156,7 +156,7 @@
         Jan 2024-Jun 2024, JSPS Postdoc Scholar, Tokyo Institute of Technology
         <strong>
       </li>
-      <p> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<strong>Supervisor: Prof. & Dr. 
+      <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<strong>Supervisor: Prof. & Dr. 
       </strong>
       <a style="color: #447ec9"
         href="https://sites.google.com/site/waterenvironmentlab/home">Yoshimura Chihiro
@@ -169,7 +169,7 @@
       <p> <li><strong>
             Sep. 2024-, Postdoctoral Researcher, IRCELYON, CNRS
         </li>
-        <p>&nbsp;&nbsp;&nbsp;&nbsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;<strong>Supervisor: Dr. </strong>
+        <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<strong>Supervisor: Dr. </strong>
           <a style="color: #447ec9"
             href="https://www.ircelyon.univ-lyon1.fr/en/syrcel-en/card/CGO/">Christian George
           </a>
